package com.example.snakesandladders;

public enum GameStatus {
    NOT_STARTED,
    RUNNING,
    FINISHED
}

